syntax = "proto3";

option go_package = ".;peer";

package peer;

service PeerService {
  rpc GetAll(Empty) returns (Peers) {}
  rpc Add(PeerID) returns (Empty) {}
  rpc Remove(PeerID) returns (Empty) {}

  rpc SelfAdd(Empty) returns (Empty) {}
  rpc SelfRemove(Empty) returns (Empty) {}
}

message Empty {}

message Peer {
  string ID = 1;
  string Hash = 2;
  int32 Port = 3;
  int64 CreatedAt = 4;
}

message Peers {
  repeated Peer Peers = 1;
}

message PeerID {
  string PeerID = 1;
}
